Increased font sizes for headings and text

--- a/raconteur/basic-template.html
+++ b/raconteur/basic-template.html
@@ -3,7 +3,21 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <style>{{STYLES}}</style>
+    <style>
+        h1 {
+            font-size: 80px;
+        }
+        h2 {
+            font-size: 60px;
+        }
+        h3 {
+            font-size: 32px;
+        }
+        p {
+            font-size: 36px;
+        }
+        {{STYLES}}
+    </style>
 </head>
 <body>
 {{CONTENT}}
