Maximum height for html tag

--- a/raconteur/basic-template.html
+++ b/raconteur/basic-template.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <title></title>
     <style>
+        html{
+            height: 100%;
+            border: 1px solid red;
+        }
+        body {
+            min-height: 100%;
+        }
         h1 {
             font-size: 80px;
         }
@@ -20,6 +27,8 @@
     </style>
 </head>
 <body>
-{{CONTENT}}
+    <div class="container">
+        {{CONTENT}}
+    </div>
 </body>
 </html>
