--- a/raconteur/basic-template.html
+++ b/raconteur/basic-template.html
@@ -6,7 +6,8 @@
     <style>
         html{
             height: 100%;
-            border: 1px solid red;
+            overflow-y: hidden;
+            overflow-x: hidden;
         }
         body {
             min-height: 100%;
