--- a/raconteur/basic-template.html
+++ b/raconteur/basic-template.html
@@ -6,8 +6,8 @@
     <style>
         html{
             height: 100%;
-            overflow-y: hidden;
-            overflow-x: hidden;
+            /*overflow-y: hidden;*/
+            /*overflow-x: hidden;*/
         }
         body {
             min-height: 100%;
@@ -24,7 +24,6 @@
         p {
             font-size: 36px;
         }
-        {{STYLES}}
     </style>
 </head>
 <body>
