--- a/raconteur/basic-template.html
+++ b/raconteur/basic-template.html
@@ -6,8 +6,8 @@
     <style>
         html{
             height: 100%;
-            /*overflow-y: hidden;*/
-            /*overflow-x: hidden;*/
+            overflow-y: hidden;
+            overflow-x: hidden;
         }
         body {
             min-height: 100%;
