--- a/raconteur/basic-template.html
+++ b/raconteur/basic-template.html
@@ -12,6 +12,9 @@
         body {
             min-height: 100%;
         }
+        h1, h2, h3, h4, h5, h6 {
+            text-align: center;
+        }
         h1 {
             font-size: 80px;
         }
