Resolves #10. Slide height is 100%

--- a/raconteur/basic-template.html
+++ b/raconteur/basic-template.html
@@ -12,6 +12,15 @@
         body {
             min-height: 100%;
         }
+        .container {
+            min-height: 100%;
+        }
+        .slide {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+        }
         h1, h2, h3, h4, h5, h6 {
             text-align: center;
         }
