Improved slide layout

--- a/raconteur/basic-template.html
+++ b/raconteur/basic-template.html
@@ -6,20 +6,18 @@
     <style>
         html{
             height: 100%;
-            overflow-y: hidden;
-            overflow-x: hidden;
-        }
-        body {
-            min-height: 100%;
         }
         .container {
             min-height: 100%;
+            display: table;
+            margin: 0 auto;
         }
         .slide {
-            position: absolute;
-            top: 0;
-            left: 0;
+            display: table-row;
             width: 100%;
+            padding: 35px;
+            margin-left: 25px;
+            margin-right: 25px;
         }
         h1, h2, h3, h4, h5, h6 {
             text-align: center;
