--- a/raconteur/basic-template.html
+++ b/raconteur/basic-template.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <title></title>
     <style>
-        html{
+        html, body {
             height: 100%;
+            width: 100%;
         }
-        .container {
-            min-height: 100%;
+        body {
+            margin: 0px;
+            padding: 0px;
             display: table;
-            margin: 0 auto;
         }
         .slide {
-            display: table-row;
+            height: 100%;
             width: 100%;
-            padding: 35px;
+            display: table-row;
             margin-left: 25px;
             margin-right: 25px;
         }
@@ -37,8 +38,6 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        {{CONTENT}}
-    </div>
+{{CONTENT}}
 </body>
 </html>
