--- a/raconteur/basic-template.html
+++ b/raconteur/basic-template.html
@@ -9,8 +9,9 @@
             width: 100%;
         }
         body {
-            margin: 0px;
-            padding: 0px;
+            margin: 0;
+            padding-left: 8px;
+            padding-right: 8px;
             display: table;
         }
         .slide {
@@ -19,6 +20,8 @@
             display: table-row;
             margin-left: 25px;
             margin-right: 25px;
+            padding-left: 25px;
+            padding-right: 25px;
         }
         h1, h2, h3, h4, h5, h6 {
             text-align: center;
@@ -33,7 +36,7 @@
             font-size: 32px;
         }
         p, li, a {
-            font-size: 48px;
+            font-size: 40px;
         }
     </style>
 </head>
